--- a/style.css
+++ b/style.css
@@ -24,9 +24,7 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: center;
-    height: 100vh;
-    width: 100%;
+    justify-content: center; 
     margin: 0;
     padding: 0;
 }
@@ -37,10 +35,10 @@ h1 {
 }
 
 .tracker {
-    height: 20px;
-    width: 540px;
+    height: 5vh;
+    width: 100%;
     display: flex;
-    align-items: center;
+    align-items:baseline;
     justify-content: space-between;
     color: var(--basic-color-white);
 }
@@ -48,28 +46,42 @@ h1 {
 .time-tracker, .mistake-tracker {
     height: 100%;
     width: auto;
+    margin: 0;
 }
+
 
 .mistake-tracker {
     text-align: end;
 }
 
-.gameboard {
-    background-color: var(--gameboard-background-color);
-    width: 540px;
-    height: 540px;
+.gameboard-container {
+    width: 100%;
+    position: relative;
+    padding-bottom: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.gameboard{
+    background-color: var(--gameboard-background-color);
+    top: 0;
+    left: 0;    
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
 
 .number {
     border: 1px solid var(--light-gray-transparent);
-    height: 60px;
-    width: 60px;
-    /* display: flex; */
+    height: 100%;
+    width: calc(100%/9);
+    display: flex;
     position: relative;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    box-sizing: border-box;
 }
 
 .number.highlight {
@@ -82,8 +94,8 @@ h1 {
 
 
 .line {
-    width: 540px;
-    height: 60px;
+    width: 100%;
+    height: calc(100%/9);
     display: flex;
 }
 
@@ -96,12 +108,20 @@ h1 {
     border-bottom: 3px solid var(--light-gray-transparent);
 }
 
-.container {
-    width: 540px;
-    height: 225px;
+.btn-container {
+    width: 100%;
+    height: 29%;
     position: relative;
 }
 
+.container {
+    max-width: 540px;
+    max-height: 785px;
+    width: 50vh;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+}
 
 .helper-options {
     width: 100%;
@@ -184,8 +204,8 @@ h1 {
 }
 
 .solution-numbers-pad .num, .notes-numbers-pad .notes-num {
-    width: 60px;
-    height: 60px;
+    width: calc(100%/9);
+    /* height: 60px; */
     bottom: 0;
     display: flex;
     align-items: center;
