--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
     max-width: 100%;
-    width: 400px;
+    width: 40vh;
     animation-name: modalopen;
     animation-duration: var(--modal-duration);
     position: fixed;   
